--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 html,body{width:100%;height:100%;margin:0;padding:0;overflow:hidden;}
 #left{float:left;width:9.5%;height:100%;border-right:solid 1vw #000;}
 #right{float:left;width:89.5%;height:100%;}
+.key,.resource{width:100%;height:5%;text-align:center;font-size:150%;}
