--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html,body{width:100%;height:100%;margin:0;padding:0;overflow:hidden;}
 #left{float:left;width:9.5%;height:100%;border-right:solid 1vw #000;}
 #right{float:left;width:89.5%;height:100%;}
-#add-k,#add-r{margin:0;padding:0;overflow:hidden;border:none;padding:none;}
+#add-k,#add-r{margin:0;padding:0;overflow:hidden;border:none;padding:none;resize:none;}
 .key,.resource{width:100%;height:5%;text-align:center;font-size:150%;}
